# tdc-transformation-2021

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: tests.yml
k6/: test_script.js
src/application/: employee_repository.py  employee_service.py  foo_repository.py  foo_service.py
src/domain/: foo.py  product.py
src/infrastructure/: __init__.py  aiohttp.py  database.py  foo_repository.py  service_parameters.py
src/infrastructure/pymongo/: __init__.py  employee_repository.py
src/infrastructure/sqlalchemy/: __init__.py  employee_repository.py
src/infrastructure/sqlalchemy/migration/: env.py
src/infrastructure/sqlalchemy/migration/versions/: a61c18782361_add_employee_table.py
src/infrastructure/sqlalchemy/model/: employee.py
src/presentation/rest_api/: main.py
tests/: conftest.py
tests/application/foo_service/: foo_service_fixtures.py  test_load_foo.py
tests/infrastructure/database/: dynamo_db_test_wrapper.py  test_dynamo_db_test_wrapper.py
tests/infrastructure/foo_repository/: foo_repository_fixtures.py  test_load_foo.py
tests/presentation/rest_api/: test_foo_get.py  test_get_product.py
